--- a/Kas design page.html
+++ b/Kas design page.html
@@ -63,6 +63,9 @@
       height: 5px;
       background-color: #97837A;
     }
+    .textbox-image, .map-image {
+      background-color: transparent;
+    }
     .textbox-image {
       width: 40%; /* Adjust the width as needed */
       margin-top: 20px; /* Adjust the margin-top as needed */
@@ -70,7 +73,7 @@
     .map-image {
       width: 50%; /* Adjust the width as needed */
       margin-top: 20px; /* Adjust the margin-top as needed */
-	  margin-left: 100px;
+      margin-left: 100px;
     }
   </style>
 </head>
@@ -92,10 +95,10 @@
   </header>
 
   <!-- Add the textbox image above the map image -->
-  <img class="textbox-image" src="Text-Where Ideas, become a reality.png" alt="Textbox Image">
+  <img class="textbox-image" src="Text-Where Ideas, become a reality.png" alt="Textbox Image" style="background-color: transparent;">
 
   <!-- Add the map image under the textbox image -->
-  <img class="map-image" src="Global design.png" alt="Map Image">
+  <img class="map-image" src="Global design.png" alt="Map Image" style="background-color: transparent;">
 
   <!-- More content or footer goes here -->
 </body>
