--- a/Kas design page.html
+++ b/Kas design page.html
@@ -6,13 +6,14 @@
   <style>
     body {
       background-color: #f5deb3;
-      padding-left: 20px;
+      padding: 20px; /* Adjust padding for better spacing */
+      margin: 0; /* Remove default margin */
     }
     .separator {
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-top: -5px;
+      margin-top: 10px; /* Adjust margin for better spacing */
     }
     .separator::before {
       content: "\2605";
@@ -29,31 +30,28 @@
     }
     .menu-button {
       cursor: pointer;
-      font-size: 70px;
+      font-size: 40px; /* Adjust font size for better visibility */
       background-color: transparent;
       color: #97837A;
-      margin-left: auto;
-      margin-top: -10px;
-      padding: 20px 60px;
+      padding: 10px; /* Adjust padding for better spacing */
       border-radius: 20px;
     }
     .button-container {
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      margin-left: 300px;
     }
     .button-container button {
       background-color: #97837A;
       color: #f5deb3;
       border: none;
-      padding: 25px 70px;
-      margin: 0 30px;
+      padding: 15px 30px; /* Adjust padding for better spacing */
+      margin: 0 10px; /* Adjust margin for better spacing */
       border-radius: 25px;
-      font-size: 25px;
+      font-size: 20px; /* Adjust font size for better visibility */
     }
     .logo {
-      /* margin-right: auto; */
+      max-width: 100%; /* Ensure logo does not exceed container width */
     }
     .line {
       position: absolute;
@@ -64,16 +62,8 @@
       background-color: #97837A;
     }
     .textbox-image, .map-image {
-      background-color: transparent;
-    }
-    .textbox-image {
-      width: 40%; /* Adjust the width as needed */
-      margin-top: 20px; /* Adjust the margin-top as needed */
-    }
-    .map-image {
-      width: 50%; /* Adjust the width as needed */
-      margin-top: 20px; /* Adjust the margin-top as needed */
-      margin-left: 100px;
+      width: 100%; /* Adjust width to fill container */
+      margin-top: 20px; /* Adjust margin for better spacing */
     }
   </style>
 </head>
@@ -81,24 +71,24 @@
 <body>
   <header>
     <img class="logo" src="Kas Design logo.png" alt="Logo">
-    <div class="button-container">
-      <button>My work</button>
-      <div class="separator"></div>
-      <button>About me</button>
-      <div class="separator"></div>
-      <button>Contact</button>
-      <div class="separator"></div>
-      <button>Socials</button>
-    </div>
     <div class="menu-button">&#9776;</div>
     <div class="line"></div>
   </header>
 
-  <!-- Add the textbox image above the map image -->
-  <img class="textbox-image" src="Text-Where Ideas, become a reality.png" alt="Textbox Image" style="background-color: transparent;">
+  <div class="separator"></div>
 
-  <!-- Add the map image under the textbox image -->
-  <img class="map-image" src="Global design.png" alt="Map Image" style="background-color: transparent;">
+  <div class="button-container">
+    <button>My work</button>
+    <button>About me</button>
+    <button>Contact</button>
+    <button>Socials</button>
+  </div>
+
+  <!-- Add the textbox image -->
+  <img class="textbox-image" src="Text-Where Ideas, become a reality.png" alt="Textbox Image">
+
+  <!-- Add the map image -->
+  <img class="map-image" src="Global design.png" alt="Map Image">
 
   <!-- More content or footer goes here -->
 </body>
