--- a/Kas design page.html
+++ b/Kas design page.html
@@ -6,14 +6,14 @@
   <style>
     body {
       background-color: #f5deb3;
-      padding: 20px; /* Adjust padding for better spacing */
-      margin: 0; /* Remove default margin */
+      padding: 20px;
+      margin: 0;
     }
     .separator {
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-top: 10px; /* Adjust margin for better spacing */
+      margin-top: 10px;
     }
     .separator::before {
       content: "\2605";
@@ -30,10 +30,10 @@
     }
     .menu-button {
       cursor: pointer;
-      font-size: 40px; /* Adjust font size for better visibility */
+      font-size: 40px;
       background-color: transparent;
       color: #97837A;
-      padding: 10px; /* Adjust padding for better spacing */
+      padding: 10px;
       border-radius: 20px;
     }
     .button-container {
@@ -45,25 +45,38 @@
       background-color: #97837A;
       color: #f5deb3;
       border: none;
-      padding: 15px 30px; /* Adjust padding for better spacing */
-      margin: 0 10px; /* Adjust margin for better spacing */
+      padding: 15px 30px;
+      margin: 0 10px;
       border-radius: 25px;
-      font-size: 20px; /* Adjust font size for better visibility */
+      font-size: 20px;
     }
     .logo {
-      max-width: 100%; /* Ensure logo does not exceed container width */
+      max-width: 100%;
     }
     .line {
       position: absolute;
-      bottom: -5px;
+      bottom: 0;
       left: 0;
       width: 100%;
       height: 5px;
       background-color: #97837A;
     }
     .textbox-image, .map-image {
-      width: 100%; /* Adjust width to fill container */
-      margin-top: 20px; /* Adjust margin for better spacing */
+      width: 100%;
+      height: auto;
+      margin-top: 20px;
+    }
+
+    /* Responsive styles */
+    @media screen and (max-width: 768px) {
+      .menu-button {
+        font-size: 30px;
+        padding: 8px 20px;
+      }
+      .button-container button {
+        padding: 10px 20px;
+        font-size: 16px;
+      }
     }
   </style>
 </head>
