--- a/Kas design/Kas design page.html
+++ b/Kas design/Kas design page.html
@@ -27,6 +27,7 @@
       align-items: center;
       justify-content: space-between;
       position: relative;
+      z-index: 1;
     }
     .menu-button {
       cursor: pointer;
@@ -39,7 +40,10 @@
     .button-container {
       display: flex;
       align-items: center;
-      justify-content: flex-end;
+      justify-content: space-between;
+      max-width: 100%;
+      overflow-x: auto;
+      z-index: 1;
     }
     .button-container button {
       background-color: #97837A;
@@ -54,14 +58,16 @@
     }
     .logo {
       max-width: 100%;
+      z-index: 1;
     }
     .line {
       position: absolute;
-      bottom: 0;
+      top: 100px;
       left: 0;
       width: 100%;
       height: 5px;
       background-color: #97837A;
+      z-index: 0;
     }
     .textbox-image, .map-image {
       width: 100%;
@@ -87,7 +93,6 @@
   <header>
     <img class="logo" src="Kas Design logo.png" alt="Logo">
     <div class="menu-button">&#9776;</div>
-    <div class="line"></div>
   </header>
 
   <div class="separator"></div>
